--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
      </div>
 
 
-<p id="codedBy"> Coded by Samantha Pracz-Kudrej</p>
+<p id="codedBy"> <a href="https://github.com/sammmmie/Weather-Project.git"> Open-source code </a> by Samantha Pracz-Kudrej</p>
         </div>
      </div>
     </div>
