--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="container weather">
-     <div class="card weather-board">
+     <div class="card-weather-board">
         <div class="card-body">
 
 
