--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
               <div id="location">
               Warsaw
             </div> 
+            <div id="todayDate">
+             Tuesday 16:00
+            </div>
             <br />
               <div class="current-temperature">
                <span id="currentTemp"> 13 </span> 
@@ -60,15 +63,17 @@
                  <a href="#" id="fahrenheit-link" span class="F">°F </span></a>
                </span>
               </div>
+
             </div>
             <div class="col">
               <div class="current-weather-sticker">
                 <i class="fas fa-cloud-sun "></i>
               </div>
-              <br />
-              <div id="todayDate">
-               Tuesday 16:00
-              </div>
+              <ul>
+                <li>Precipitation: <span id="precipitation"></span>%</li>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> km/h</li>
+              </ul>
             </div>
           </div>
          </div>
