--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
               Warsaw
             </div> 
             <div id="todayDate">
-             Tuesday 16:00
-            </div>
+
             <br />
               <div class="current-temperature">
                <span id="currentTemp"> 13 </span> 
@@ -69,6 +68,10 @@
               <div class="current-weather-sticker">
                 <i class="fas fa-cloud-sun "></i>
               </div>
+           <br />
+            <div id="todayDate">
+             Tuesday 16:00
+            </div>
               <ul>
                 <li>Precipitation: <span id="precipitation"></span>%</li>
                 <li>Humidity: <span id="humidity"></span>%</li>
