--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
               <div id="location">
               Warsaw
             </div> 
-            <div id="todayDate">
             <br />
               <div class="current-temperature">
                <span id="currentTemp"> 13 </span> 
@@ -65,7 +64,7 @@
             </div>
             <div class="col">
               <div class="current-weather-sticker">
-                <i class="fas fa-cloud-sun "></i>
+                <i class="fas fa-cloud-sun " id="icon"></i>
               </div>
            <br />
 
@@ -74,7 +73,7 @@
             </div>
 
               <ul>
-                <li>Precipitation: <span id="precipitation"></span>%</li>
+                <li> <span id="description"></span></li>
                 <li>Humidity: <span id="humidity"></span>%</li>
                 <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
@@ -83,7 +82,7 @@
          </div>
 
 
-    <div class="five-day-weather-forecast">
+    <div class="five-day-weather-forecast" id="forecast">
         <div class="row">
             <div class="col">
               <div class="card">
