Weather icons and descriptions

--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
                </span>
               </div>
 
+
+
             </div>
             <div class="col">
-              <div class="current-weather-sticker">
-                <i class="fas fa-cloud-sun " id="icon"></i>
+               <div id="todayDate">
+                Tuesday 16:00
+               </div>
+              <div class="image">
+                <img src="" id="icon" />
               </div>
-           <br />
-
-            <div id="todayDate">
-             Tuesday 16:00
-            </div>
 
               <ul>
                 <li> <span id="description"></span></li>
@@ -88,7 +88,9 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-day-of-the-week">Tomorrow</h5>
-                    <i class="fas fa-cloud"></i>
+                  <div class="image">
+                    <img src="" id="icon" />
+                  </div>
                   <p class="card-temperature">9°C</p>
                 </div>
               </div>
@@ -97,7 +99,9 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-day-of-the-week">Wednesday</h5>
-                    <i class="fas fa-cloud-rain"></i>
+                  <div class="image">
+                    <img src="" id="icon" />
+                  </div>
                   <p class="card-temperature">5°C</p>
                 </div>
               </div>
@@ -106,7 +110,9 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-day-of-the-week">Thursday</h5>
-                      <i class="fas fa-cloud-rain"></i>
+                    <div class="image">
+                      <img src="" id="icon" />
+                    </div>
                     <p class="card-temperature">3°C</p>
                   </div>
                 </div>
@@ -115,7 +121,9 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-day-of-the-week">Friday</h5> 
-                    <i class="fas fa-cloud-sun"></i>
+                  <div class="image">
+                    <img src="" id="icon" />
+                  </div>
                   <p class="card-temperature">6°C</p>
                 </div>
               </div>
@@ -124,7 +132,9 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-day-of-the-week">Saturday</h5>
-                      <i class="fas fa-sun"></i>
+                    <div class="image">
+                      <img src="" id="icon" />
+                    </div>
                     <p class="card-temperature">8°C</p>
                   </div>
                 </div>
