--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
             </div> 
             <br />
               <div class="current-temperature">
-               <span id="currentTemp"> 13 </span> 
+               <span id="currentTemp">  </span> 
+               
                <span id="tempUnits"> 
-
-                 <a href="#" id="celcius-link" span class="C">°C </a>
+                 <a href="#" id="celcius-link" class="active">°C </a>
                  <span class="line">|</span>
-                 <a href="#" id="fahrenheit-link" span class="F">°F </span></a>
+                 <a href="#" id="fahrenheit-link">°F </span></a>
                </span>
               </div>
 
