--- a/index.html
+++ b/index.html
@@ -82,60 +82,64 @@
          </div>
 
 
+
+
+  
+
     <div class="five-day-weather-forecast" id="forecast">
         <div class="row">
             <div class="col">
-              <div class="card">
+              <div class="card" id="forecastElement0">
                 <div class="card-body">
-                  <h5 class="card-day-of-the-week">Tomorrow</h5>
-                  <div class="image">
-                    <img src="" id="icon" />
-                  </div>
-                  <p class="card-temperature">9°C</p>
+                  <h5 class="card-day-of-the-week" id="forecast-time-0"></h5>
+                  
+                  <img id="forecast-icon-0" alt="" />
+
+                  <p class="card-temperature" id="forecast-temp-day-0"> </p>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-day-of-the-week">Wednesday</h5>
-                  <div class="image">
-                    <img src="" id="icon" />
-                  </div>
-                  <p class="card-temperature">5°C</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-day-of-the-week">Thursday</h5>
-                    <div class="image">
-                      <img src="" id="icon" />
-                    </div>
-                    <p class="card-temperature">3°C</p>
-                  </div>
-                </div>
-            </div>
-            <div class="col">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-day-of-the-week">Friday</h5> 
-                  <div class="image">
-                    <img src="" id="icon" />
-                  </div>
-                  <p class="card-temperature">6°C</p>
+                  <h5 class="card-day-of-the-week" id="forecast-time-1"></h5>
+
+                    <img src="" id="forecast-icon-1" />
+
+                  <p class="card-temperature" id="forecast-temp-day-1"></p>
                 </div>
               </div>
             </div>
             <div class="col">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-day-of-the-week">Saturday</h5>
+                    <h5 class="card-day-of-the-week" id="forecast-time-2">Thursday</h5>
                     <div class="image">
-                      <img src="" id="icon" />
+                      <img src="" id="forecast-icon-2" />
                     </div>
-                    <p class="card-temperature">8°C</p>
+                    <p class="card-temperature" id="forecast-temp-day-2">°C</p>
+                  </div>
+                </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-day-of-the-week" id="forecast-time-3">Friday</h5> 
+                  <div class="image">
+                    <img src="" id="forecast-icon-3" />
+                  </div>
+                  <p class="card-temperature" id="forecast-temp-day-3">°C</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-day-of-the-week" id="forecast-time-4">Saturday</h5>
+                    <div class="image">
+                      <img src="" id="forecast-icon-4" />
+                    </div>
+                    <p class="card-temperature" id="forecast-temp-day-4">°C</p>
                   </div>
                 </div>
               </div>
@@ -143,7 +147,7 @@
      </div>
 
 
-<p id="codedBy"> <a href="https://github.com/sammmmie/Weather-Project.git"> Open-source code </a> by Samantha Pracz-Kudrej</p>
+<p id="codedBy"> <a href="https://github.com/sammmmie/Weather-Project.git" id="github-link"> Open-source code</a> by Samantha Pracz-Kudrej</p>
         </div>
      </div>
     </div>
